🐛 Fix : NumberArrayContainable